# envdeploy-cli

./: .gitignore  README.md  cli.py  config.py  core.py  git_setup.sh  logger.py  pyproject.toml  setup_project.sh
